Update node template to use div and data-id

--- a/client/view/node.html
+++ b/client/view/node.html
@@ -1,4 +1,5 @@
 <template name="node">
+<div class="node" data-id="{{_id}}">
   <p>{{title}} : {{total_count}}</p>
   <ul>
   {{#each kids}}
@@ -7,4 +8,5 @@
     </li>
   {{/each}}
   </ul>
+</div>
 </template>
