--- a/client/view/create_form.html
+++ b/client/view/create_form.html
@@ -1,5 +1,5 @@
 <template name="create_form">
-  <div id="node_create">
+  <div id="create_form">
     <form>
       <input name="node_title">
     </form>
