--- a/client/view/create_form.html
+++ b/client/view/create_form.html
@@ -1,7 +1,7 @@
 <template name="create_form">
   <div id="create_form">
     <form>
-      <input name="node_title">
+      <input name="tree_title">
     </form>
   </div>
 </template>
