--- a/client/view/quickswitcher/quickswitcher.html
+++ b/client/view/quickswitcher/quickswitcher.html
@@ -1,7 +1,7 @@
 <template name="quickswitcher">
   <div id="quickswitcher" style="display:none">
     <form>
-    {{> inputAutocomplete settings=settings id="switcher" class="mousetrap"}}
+    {{> inputAutocomplete settings=settings id="switcher" class=""}}
     </form>
   </div>
 </template>
