--- a/client/view/tree/tree.html
+++ b/client/view/tree/tree.html
@@ -1,6 +1,6 @@
 <template name="tree">
 <div class="tree" data-id="{{_id}}">
-  <p>{{title}} : {{total_count}} {{#if folded}}[+]{{/if}}</p>
+  <p>{{title}}: {{today_count this}} ({{total_count}}) {{#if folded}}[+]{{/if}}</p>
   <ul>
   {{#unless folded}}
     {{#each kids}}
