CSS for focus and root

--- a/client/view/tree/root.html
+++ b/client/view/tree/root.html
@@ -1,5 +1,7 @@
 <template name="root">
-  {{#with root}}
-    {{> tree}}
-  {{/with}}
+  <div id="root">
+    {{#with root}}
+      {{> tree}}
+    {{/with}}
+  </div>
 </template>
