--- a/self-mastree.css
+++ b/self-mastree.css
@@ -44,6 +44,10 @@ footer { font-size: 0.7em; margin-top: 2em;}
   padding-left: 1em;
 }
 
+.folded {
+  display: none;
+}
+
 #root {
   float: left;
 }
