Add autocomplete to rename form

--- a/client/view/tree/rename_form.html
+++ b/client/view/tree/rename_form.html
@@ -1,5 +1,5 @@
 <template name="rename_form">
   <form id="rename-form">
-    <input type="text">
+    {{> inputAutocomplete settings=settings value=initial_value}}
   </form>
 </template>
