Create form using autocomplete

--- a/client/view/tree/create_form.html
+++ b/client/view/tree/create_form.html
@@ -1,7 +1,7 @@
 <template name="create_form">
   <div id="create_form">
     <form>
-      <input name="tree_title">
+      {{> inputAutocomplete settings=settings name="tree_title"}}
     </form>
   </div>
 </template>
