Get rid of title everywhere.

--- a/client/view/tree/focus.html
+++ b/client/view/tree/focus.html
@@ -1,5 +1,5 @@
 <template name="focus">
   <div id="focus">
-    <div id="focus-title">{{title}}</div>
+    <div id="focus-text">{{text}}</div>
   </div>
 </template>
