--- a/client/view/tree/tree.html
+++ b/client/view/tree/tree.html
@@ -1,6 +1,6 @@
 <template name="tree">
 <div class={{focused_class this}} data-id="{{_id}}">
-  <p>{{title}}: <span class="grey">{{total_count}} ({{{today_count this}}}) {{#if folded}}[+]{{/if}}</span></p>
+  <p>{{text}}: <span class="grey">{{total_count}} ({{{today_count this}}}) {{#if folded}}[+]{{/if}}</span></p>
   <ul class={{folded_class this}}>
     {{#each kids}}
       {{> tree}}
