--- a/client/view/tree/create_form.html
+++ b/client/view/tree/create_form.html
@@ -1,7 +1,7 @@
 <template name="create_form">
   <div id="create_form">
     <form>
-      {{> inputAutocomplete settings=settings name="tree_text" class="mousetrap"}}
+      {{> inputAutocomplete settings=settings name="tree_text"}}
     </form>
   </div>
 </template>
