--- a/client/view/tree/tree.html
+++ b/client/view/tree/tree.html
@@ -1,6 +1,6 @@
 <template name="tree">
 <div class={{focused_class this}} data-id="{{_id}}">
-  <p>{{ref}}: <span class="grey">{{total_count}} ({{{today_count this}}}) {{#if folded}}[+]{{/if}}</span></p>
+  <p>{{ref}}: <span class="grey">{{total_count}} ({{yesterday_count this}}{{{today_count this}}}) {{#if folded}}[+]{{/if}}</span></p>
   <ul class={{folded_class this}}>
     {{#each kids}}
       {{> tree}}
