Similar ref logic for parent form input

--- a/client/view/tree/rename_form.html
+++ b/client/view/tree/rename_form.html
@@ -3,11 +3,11 @@
     <table>
       <tr>
         <td>Text</td>
-        <td>{{> inputAutocomplete settings=settings id="focus-edit-text" value=initial_value name="text"}}</td>
+        <td>{{> inputAutocomplete settings=text_settings id="focus-edit-text" value=initial_value name="text"}}</td>
       </tr>
       <tr>
         <td>Parent</td>
-        <td>{{> inputAutocomplete settings=settings id="focus-edit-parent" value=parent_value name="parent"}}</td>
+        <td>{{> inputAutocomplete settings=parent_settings id="focus-edit-parent" value=parent_value name="parent"}}</td>
       </tr>
     </table>
     <br>
