Added basic subscriptions and routing.

--- a/client/view/self-mastree.html
+++ b/client/view/self-mastree.html
@@ -1,3 +1,4 @@
+<template name="/">
 <head>
   <title>self-mastree</title>
   <link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,400' rel='stylesheet' type='text/css'>
@@ -14,3 +15,4 @@
     {{> focus}}
   </div>
 </body>
+</template>
