--- a/self-mastree.css
+++ b/self-mastree.css
@@ -15,7 +15,7 @@ dt {font-weight: bold;}
 img {border: none;}
 pre {border-left: 1px solid #ccc; margin-left: 0em; padding-left: 0.5em;}
 blockquote {padding: 0.3em; background-color: #E8F2F5; margin-left:0.5em; margin-right:0;}
-th, td {border: none; padding: 0.3em;}
+th, td {border: none; padding-right: 0.5em;}
 th {background-color: #f0f0f0;}
 hr {border: none; border-top: 1px solid #E8F2F5; width: 100%;}
 del {text-decoration: line-through; color: #777777;}
