Show and hide help.

--- a/client/view/help.html
+++ b/client/view/help.html
@@ -39,5 +39,7 @@
         <td>Edit focused tree</td>
       </tr>
     </table>
+  {{else}}
+    <a id="show-help">Show Help</a>
   {{/if}}
 </template>
