Update help text.

--- a/client/view/help.html
+++ b/client/view/help.html
@@ -38,6 +38,14 @@
         <td>Ctrl+S</td>
         <td>Edit focused tree</td>
       </tr>
+      <tr>
+        <td>Ctrl+X</td>
+        <td>Archive focused tree</td>
+      </tr>
+      <tr>
+        <td>Ctrl+Space</td>
+        <td>Activate quickswitcher</td>
+      </tr>
     </table>
   {{else}}
     <a id="show-help">Show Help</a>
