Barebones welcome screen.

--- a/client/view/self-mastree.html
+++ b/client/view/self-mastree.html
@@ -11,8 +11,12 @@
       {{> loginButtons}}
       {{> quickswitcher}}
     </header>
+    {{#if currentUser}}
     {{> root}}
     {{> focus}}
+    {{else}}
+    Login or create an account to use Self-Mastree.
+    {{/if}}
   </div>
 </body>
 </template>
