Expand help text.

--- a/client/view/help.html
+++ b/client/view/help.html
@@ -19,6 +19,14 @@
         <td>Focus children</td>
       </tr>
       <tr>
+        <td>Shift+Up</td>
+        <td>Move tree up</td>
+      </tr>
+      <tr>
+        <td>Shift+Down</td>
+        <td>Move tree down</td>
+      </tr>
+      <tr>
         <td>Space</td>
         <td>Increment focused</td>
       </tr>
