--- a/client/view/self-mastree.html
+++ b/client/view/self-mastree.html
@@ -7,7 +7,7 @@
 <body>
   <div id="content">
     <header>
-      <a href="/index"><img src="/zenchinese.png" class="logo"/></a>
+      <a href="/"><img src="/zenchinese.png" class="logo"/></a>
       {{> loginButtons}}
       {{> quickswitcher}}
     </header>
