Move API url into help.

--- a/client/view/help.html
+++ b/client/view/help.html
@@ -3,6 +3,10 @@
     <a id="hide-help">Hide Help</a>
     <table>
       <tr>
+        <td>API URL</td>
+        <td>{{api_inc_url}}</td>
+      </tr>
+      <tr>
         <td>Up</td>
         <td>Focus previous sibling</td>
       </tr>
