Working on record logic.

--- a/client/view/tree/focus.html
+++ b/client/view/tree/focus.html
@@ -11,6 +11,7 @@
         <td>{{> inputAutocomplete settings=parent_settings id="focus-edit-parent" value=parent_value name="parent"}}</td>
       </tr>
     </table>
+    {{recordStats}}
     <br>
     <input type="submit" style="display:none">
   </form>
