Table display of record stats

--- a/client/view/tree/focus.html
+++ b/client/view/tree/focus.html
@@ -10,8 +10,8 @@
         <td>Parent</td>
         <td>{{> inputAutocomplete settings=parent_settings id="focus-edit-parent" value=parent_value name="parent"}}</td>
       </tr>
+      {{{recordStats}}}
     </table>
-    {{recordStats}}
     <br>
     <input type="submit" style="display:none">
   </form>
