--- a/self-mastree.css
+++ b/self-mastree.css
@@ -30,6 +30,14 @@ footer { font-size: 0.7em; margin-top: 2em;}
 
 #content { margin: 0 auto; padding: 0 1em; position: relative; }
 
+#root {
+  font-size: 120%;
+}
+
+.tree {
+  font-size: 93%;
+}
+
 .grey {
   color: #AAA;
 }
