Don't show parent attribute for root node, that could get weird.

--- a/client/view/tree/focus.html
+++ b/client/view/tree/focus.html
@@ -6,10 +6,12 @@
         <td>Text</td>
         <td>{{> inputAutocomplete settings=text_settings id="focus-edit-text" value=initial_value name="text"}}</td>
       </tr>
+      {{#unless root}}
       <tr>
         <td>Parent</td>
         <td>{{> inputAutocomplete settings=parent_settings id="focus-edit-parent" value=parent_value name="parent"}}</td>
       </tr>
+      {{/unless}}
       {{{recordStats}}}
     </table>
     <br>
