Add tree val to focus form.

--- a/client/view/tree/focus.html
+++ b/client/view/tree/focus.html
@@ -12,6 +12,10 @@
         <td>{{> inputAutocomplete settings=parent_settings id="focus-edit-parent" value=parent_value name="parent"}}</td>
       </tr>
       {{/unless}}
+      <tr>
+        <td>Points</td>
+        <td><input type="text" name="val" value="{{val}}"></td>
+      </tr>
       {{{recordStats}}}
     </table>
     <br>
