Prevent annoying accidents when failing to find something.

--- a/client/view/quickswitcher/quickswitcher.html
+++ b/client/view/quickswitcher/quickswitcher.html
@@ -1,6 +1,6 @@
 <template name="quickswitcher">
   <div id="quickswitcher" style="display:none">
-    <form>
+    <form id="qswitcher">
     {{> inputAutocomplete settings=settings id="switcher" class=""}}
     </form>
   </div>
